GBG background content z-index issue fixed

--- a/src/styles/components/GlassBeadGame.module.scss
+++ b/src/styles/components/GlassBeadGame.module.scss
@@ -4,6 +4,9 @@
     padding-top: 60px;
     width: 100%;
     height: 100vh;
+    z-index: $pageContentZIndex;
+    background-color: $grey1;
+
     .videoBackground {
         width: 100%;
         height: 100%;
@@ -24,7 +27,6 @@
     padding-right: 20px;
     width: 350px;
     height: 100%;
-    // border-right: 1px solid #ddd;
     background-color: $white;
     display: flex;
     flex-direction: column;
